--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
@@ -1,5 +1,5 @@
 /**
- * @version: $Id: legacy.css 2006 2011-11-23 15:34:46Z Radek Suski $
+ * @version: $Id$
  * @package: SobiPro Library
  * ===================================================
  * @author
@@ -11,9 +11,9 @@
  * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
  * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
  * ===================================================
- * $Date: 2011-11-23 16:34:46 +0100 (Mi, 23 Nov 2011) $
- * $Revision: 2006 $
- * $Author: Radek Suski $
+ * $Date$
+ * $Revision$
+ * $Author$
  * File location: components/com_sobipro/media/css/bootstrap/sobipro.css $
  */
 
