--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
@@ -1,5 +1,5 @@
 /**
- * @version: $Id: tree.css 717 2011-02-02 19:49:02Z Radek Suski $
+ * @version: $Id$
  * @package: SobiPro Library
  * ===================================================
  * @author
@@ -11,10 +11,10 @@
  * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
  * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
  * ===================================================
- * $Date: 2011-02-02 20:49:02 +0100 (Wed, 02 Feb 2011) $
- * $Revision: 717 $
- * $Author: Radek Suski $
- * $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/media/css/adm/tree.css $
+ * $Date$
+ * $Revision$
+ * $Author$
+ * $HeadURL$
  */ /* Styles for SigsiuTree */
 	/* -------------------------------------------------------- */
 .sigsiuTree {
