--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -1,3 +1,22 @@
+/**
+ * @version: $Id$
+ * @package: SobiPro Library
+ * ===================================================
+ * @author
+ * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
+ * Email: sobi[at]sigsiu.net
+ * Url: http://www.Sigsiu.NET
+ * ===================================================
+ * @copyright Copyright (C) 2006 - 2012 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
+ * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
+ * ===================================================
+ * $Date$
+ * $Revision$
+ * $Author$
+ * File location: components/com_sobipro/media/css/adm/sobipro.less $
+ */
+
 @background: #ffffff;
 @font: #333;
 @font-size: 15px;
@@ -359,101 +378,5 @@ input.sp-input-micro[type="text"] {
 
 .spScreenSubHead {
     padding: 10px;
-}
-
-.spicon-48-SobiPro {
-    background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
-}
-
-.spicon-48-SobiApplication {
-    background-image: url(../../../../media/sobipro/48x48/folder-application.png);
-}
-
-.spicon-48-SobiApplicationSection {
-    background-image: url(../../../../media/sobipro/48x48/folder-application-section.png);
-}
-
-.spicon-48-SobiTemplate {
-    background-image: url(../../../../media/sobipro/48x48/folder-templates.png);
-}
-
-.spicon-48-SobiTemplateSection {
-    background-image: url(../../../../media/sobipro/48x48/folder-template-section.png);
-}
-
-.spicon-48-SobiSection {
-    background-image: url(../../../../media/sobipro/48x48/folder-section.png);
-}
-
-.spicon-48-SobiSectionCfg {
-    background-image: url(../../../../media/sobipro/48x48/folder-section-cfg.png);
-}
-
-.spicon-48-SobiCategory {
-    background-image: url(../../../../media/sobipro/48x48/folder-category.png);
-}
-
-.spicon-48-SobiCatList {
-    background-image: url(../../../../media/sobipro/48x48/folder-categories.png);
-}
-
-.spicon-48-SobiFields {
-    background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
-}
-
-.spicon-48-SobiFieldList {
-    background-image: url(../../../../media/sobipro/48x48/fields.png);
-}
-
-.spicon-48-SobiConfig {
-    background-image: url(../../../../media/sobipro/48x48/folder-configuration.png);
-}
-
-.spicon-48-SobiEdit {
-    background-image: url(../../../../media/sobipro/48x48/editor.png);
-}
-
-.spicon-48-SobiFieldEdit {
-    background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
-}
-
-.spicon-48-SobiEntries {
-    background-image: url(../../../../media/sobipro/48x48/entries.png);
-}
-
-.spicon-48-SobiUser {
-    background-image: url(../../../../media/sobipro/48x48/sobipro-acl-edit.png);
-}
-
-.spicon-48-SobiLevels {
-    background-image: url(../../../../media/sobipro/48x48/sobipro-acl.png);
-}
-
-.spicon-32-delete {
-    background-image: url(../../../../media/sobipro/32x32/delete.png) !important;
-}
-
-.spicon-32-download {
-    background-image: url(../../../../media/sobipro/32x32/download.png);
-}
-
-.spicon-32-list {
-    background-image: url(../../../../media/sobipro/32x32/software-update.png);
-}
-
-.spicon-32-cleanCache {
-    background-image: url(../../../../media/sobipro/32x32/eraser.png);
-}
-
-.spicon-32-document-save-all {
-    background-image: url(../../../../media/sobipro/32x32/document-save-all.png);
-}
-
-.spicon-32-save {
-    background-image: url(../../../../media/sobipro/32x32/document-save.png) !important;
-}
-
-.spicon-32-help {
-    background-image: url(../../../../media/sobipro/32x32/sobipro-help.png) !important;
 }
 
