--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -22,71 +22,71 @@
 @font-size: 15px;
 
 .SobiPro {
-    color: @font;
-    font-size: @font-size;
+  color: @font;
+  font-size: @font-size;
 }
 
 .SobiPro .breadcrumb {
-    padding: 7px 14px;
-    margin: 0 0 18px;
-    list-style: none;
-    background-color: #FBFBFB;
-    background-image: -moz-linear-gradient(top, white, whiteSmoke);
-    background-image: -ms-linear-gradient(top, white, whiteSmoke);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(whiteSmoke));
-    background-image: -webkit-linear-gradient(top, white, whiteSmoke);
-    background-image: -o-linear-gradient(top, white, whiteSmoke);
-    background-image: linear-gradient(top, white, whiteSmoke);
-    background-repeat: repeat-x;
-    border: 1px solid #DDD;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 6px;
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#f5f5f5', GradientType = 0);
-    -webkit-box-shadow: inset 0 1px 0 white;
-    -moz-box-shadow: inset 0 1px 0 #ffffff;
-    box-shadow: inset 0 1px 0 white;
+  padding: 7px 14px;
+  margin: 0 0 18px;
+  list-style: none;
+  background-color: #FBFBFB;
+  background-image: -moz-linear-gradient(top, white, whiteSmoke);
+  background-image: -ms-linear-gradient(top, white, whiteSmoke);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(whiteSmoke));
+  background-image: -webkit-linear-gradient(top, white, whiteSmoke);
+  background-image: -o-linear-gradient(top, white, whiteSmoke);
+  background-image: linear-gradient(top, white, whiteSmoke);
+  background-repeat: repeat-x;
+  border: 1px solid #DDD;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 6px;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#f5f5f5', GradientType = 0);
+  -webkit-box-shadow: inset 0 1px 0 white;
+  -moz-box-shadow: inset 0 1px 0 #ffffff;
+  box-shadow: inset 0 1px 0 white;
 }
 
 .SobiPro .firstspan {
-    margin-left: 0px!important;
+  margin-left: 0px!important;
 }
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li {
-    min-width: 160px;
+  min-width: 160px;
 }
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li .nav-header {
-    min-width: 160px;
-    padding-left: 0px;
-    padding-right: 0px;
+  min-width: 160px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 #SPAdminForm #SPAdmToolbar .dropdown-menu .SpDropDownBt li a:hover,
 #SPAdminForm #SPAdmToolbar .dropdown-menu .SpDropDownBt li a:focus,
 #SPAdminForm #SPAdmToolbar .dropdown-submenu:hover a {
-    color: #ffffff;
-    background-color: #a90000;
-    *background-color: #890000;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
-    background-image: -webkit-linear-gradient(top, #a90000, #890000);
-    background-image: -o-linear-gradient(top, #a90000, #890000);
-    background-image: linear-gradient(to bottom, #a90000, #890000);
-    background-image: -moz-linear-gradient(top, #a90000, #890000);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
-    border-color: #a90000 #a90000 #890000;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  background-color: #a90000;
+  *background-color: #890000;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
+  background-image: -webkit-linear-gradient(top, #a90000, #890000);
+  background-image: -o-linear-gradient(top, #a90000, #890000);
+  background-image: linear-gradient(to bottom, #a90000, #890000);
+  background-image: -moz-linear-gradient(top, #a90000, #890000);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
+  border-color: #a90000 #a90000 #890000;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
 #SPAdminForm #SPAdmToolbar .dropdown-toggle {
-    color: #333333;
+  color: #333333;
 }
 
 #SPAdminForm #SPAdmToolbar .dropdown-toggle .caret {
-    border-bottom-color: #993333;
-    border-top-color: #993333;
-    margin-top: 6px;
+  border-bottom-color: #993333;
+  border-top-color: #993333;
+  margin-top: 6px;
 }
 
 .SobiPro #SPAdmToolbar .icon-remove-sign {
@@ -94,106 +94,106 @@
 }
 
 .SobiPro .btn-group {
-    font-size: 0;
-    white-space: normal;
+  font-size: 0;
+  white-space: normal;
 }
 
 .SobiPro .breadcrumb .divider {
-    padding: 0 5px;
-    color: #999999;
+  padding: 0 5px;
+  color: #999999;
 }
 
 .SobiPro .breadcrumb .active a {
-    color: #333333;
+  color: #333333;
 }
 
 .SobiPro .breadcrumb li {
-    display: inline-block;
+  display: inline-block;
 }
 
 #toolbar-box {
-    display: none;
+  display: none;
 }
 
 .SobiPro .table th.SpCellCenter,
 .SobiPro .table td.SpCellCenter {
-    text-align: center;
-    vertical-align: middle;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .submenu-box, div.m {
-    background-color: @background;
+  background-color: @background;
 }
 
 #SPAdminForm #SPAdmToolbar a:hover,
 #SPAdminForm #SPAdmToolbar a {
-    color: #333333;
+  color: #333333;
 }
 
 #SPAdmToolbar .nav {
-    margin-bottom: 0px
+  margin-bottom: 0px
 }
 
 #SPAdmToolbar h3 {
-    line-height: 20px;
+  line-height: 20px;
 }
 
 #SPAdmToolbar .container-fluid {
-    padding: 0;
+  padding: 0;
 }
 
 #SPAdmToolbar .container-fluid [class*="span"] {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
 #SPAdmToolbar .nav-pills > .active > a,
 #SPAdmToolbar .SobiPro .nav-pills > .active > a:hover {
-    color: inherit;
-    background-color: whiteSmoke;
+  color: inherit;
+  background-color: whiteSmoke;
 }
 #SPAdmToolbar .spIconBar {
-    padding-top: 8px;
-    height: 45px;
+  padding-top: 8px;
+  height: 45px;
 }
 div.spScreenTitle,
 div.spScreenSubHead {
-    background-repeat: no-repeat;
-    height: 45px;
+  background-repeat: no-repeat;
+  height: 45px;
 }
 
 div.spScreenSubHead {
-    font-weight: bold;
-    font-size: 16px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 div.spScreenTitle:first-child,
 div.spScreenSubHead:first-child {
-    padding-left: 55px;
+  padding-left: 55px;
 }
 
 div.spScreenTitle h4 {
-   margin-top: 14px;
+  margin-top: 14px;
 }
 
 #SPAdmToolbar .btn-group {
-    float: left;
+  float: left;
 }
 
 #SPAdmToolbar .btn {
-    float: left;
-    padding: 4px 10px;
+  float: left;
+  padding: 4px 10px;
 }
 
 #SPAdmToolbar .divider {
-    padding: 0 5px;
-    color: #999;
-    float: left;
-    display: block;
-    margin: 0.2pt;
+  padding: 0 5px;
+  color: #999;
+  float: left;
+  display: block;
+  margin: 0.2pt;
 }
 
 #SPAdmToolbar .nav-header {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 #SPAdmToolbar i {
@@ -201,111 +201,111 @@ div.spScreenTitle h4 {
 }
 
 #SPAdminForm a {
-    color: #0000b3;
+  color: #0000b3;
 }
 #SPAdminForm a:hover {
-    color: #00007b;
+  color: #00007b;
 }
 
 #SPAdminForm table .control-label {
-    padding-top: 5px;
-    color: #0000b3;
+  padding-top: 5px;
+  color: #0000b3;
 }
 
 #SPAdminForm fieldset .control-label {
-    padding-top: 0px;
-    width: 200px;
+  padding-top: 0px;
+  width: 200px;
 }
 
 #SPAdmNavBar .control-group {
-    float: left;
-    padding-left: 12px;
+  float: left;
+  padding-left: 12px;
 }
 
 #SPAdminForm .spFieldGroup {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 #SPAdminForm .spFieldGroup label {
-    color: #993333;
-    border-bottom: 1px solid #CC9999;
-    margin-left: 20px;
-    width: 180px;
+  color: #993333;
+  border-bottom: 1px solid #CC9999;
+  margin-left: 20px;
+  width: 180px;
 }
 
 #SPAdminForm fieldset .controls {
-    margin-left: 220px;
+  margin-left: 220px;
 }
 
 #SPAdminForm .nav-tabs a {
-    color: #0000b3; /*#0088cc;*/
-    text-decoration: none;
+  color: #0000b3; /*#0088cc;*/
+  text-decoration: none;
 }
 
 #SPAdminForm .nav-tabs a:hover {
-    color: #00007b; /*#005580;*/
+  color: #00007b; /*#005580;*/
 }
 
 #SPAdminForm .controls .btn:active,
 #SPAdminForm .controls .btn.active {
-    background-color: #993333;
-    color: #ffffff;
+  background-color: #993333;
+  color: #ffffff;
 }
 .SobiPro .brand {
-    color: #7f7f7f;
-    font-size: 9px;
-    margin-left: 4px;
-    margin-top: -15px;
+  color: #7f7f7f;
+  font-size: 9px;
+  margin-left: 4px;
+  margin-top: -15px;
 }
 .SobiPro .brand a {
-    color: #7f7f7f;
-    text-decoration: none;
+  color: #7f7f7f;
+  text-decoration: none;
 }
 
 .SobiPro .btn-sobipro {
-    color: #ffffff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #a90000;
-    *background-color: #890000;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
-    background-image: -webkit-linear-gradient(top, #a90000, #890000);
-    background-image: -o-linear-gradient(top, #a90000, #890000);
-    background-image: linear-gradient(to bottom, #a90000, #890000);
-    background-image: -moz-linear-gradient(top, #a90000, #890000);
-    background-repeat: repeat-x;
-    border-color: #a90000 #a90000 #890000;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
-    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #a90000;
+  *background-color: #890000;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
+  background-image: -webkit-linear-gradient(top, #a90000, #890000);
+  background-image: -o-linear-gradient(top, #a90000, #890000);
+  background-image: linear-gradient(to bottom, #a90000, #890000);
+  background-image: -moz-linear-gradient(top, #a90000, #890000);
+  background-repeat: repeat-x;
+  border-color: #a90000 #a90000 #890000;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
 .SobiPro .btn-sobipro:hover,
 .SobiPro .btn-sobipro:active,
 .SobiPro .btn-sobipro.active,
 .SobiPro .btn-sobipro.disabled,
 .SobiPro .btn-sobipro[disabled] {
-    color: #e4e4e4;
-    background-color: #890000;
-    *background-color: #890000;
+  color: #e4e4e4;
+  background-color: #890000;
+  *background-color: #890000;
 }
 
 .SobiPro .btn-sobipro:active,
 .SobiPro .btn-sobipro.active {
-    background-color: #003399 \9;
+  background-color: #003399 \9;
 }
 .SobiPro .btn-group.open .btn-sobipro.dropdown-toggle {
-    background-color: #993333;
+  background-color: #993333;
 }
 
 .SobiPro .btn-sobipro .caret {
-    border-top-color: #ffffff;
-    border-bottom-color: #ffffff;
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
 }
 
 #SPAdminForm input,
 #SPAdminForm textarea,
 #SPAdminForm select,
 #SPAdminForm .uneditable-input {
-    color: #666666;
+  color: #666666;
 }
 
 .SobiPro .SpCellCenter input[type="text"] {
@@ -347,36 +347,51 @@ div.spScreenTitle h4 {
 }
 
 #SPAdminForm .input-splarge {
-    width: 400px;
+  width: 400px;
 }
 
 #SPAdminForm .nav-tabs .active a {
-    font-weight: bold;
-    color: #555555;
+  font-weight: bold;
+  color: #555555;
 }
 
 .SobiPro .btn-sobipro.active {
-    color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.75);
 }
 
 
 input.sp-input-micro[type="text"] {
-    width: 25px;
-    text-align: center;
+  width: 25px;
+  text-align: center;
 }
 
 .spOutput {
-    min-height: 23px;
-    padding-top: 5px;
+  min-height: 23px;
+  padding-top: 5px;
 }
 
 .sp-mini-bt {
-    width: 25px;
-    height: 20px;
-    padding: 0px !important;
+  width: 25px;
+  height: 20px;
+  padding: 0px !important;
 }
 
 .spScreenSubHead {
-    padding: 10px;
+  padding: 10px;
 }
+
+.spicon-48-SobiPro {
+  background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
+}
+.spicon-48-SobiFields {
+  background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
+}
+.spicon-48-SobiSection {
+  background-image: url(../../../../media/sobipro/48x48/folder-section.png);
+}
+.spicon-48-SobiFieldEdit {
+  background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
+}
+
+
 
