--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -316,3 +316,15 @@ input.sp-input-micro[type="text"] {
 .spScreenSubHead {
   padding: 10px;
 }
+.spicon-48-SobiPro {
+  background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
+}
+.spicon-48-SobiFields {
+  background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
+}
+.spicon-48-SobiSection {
+  background-image: url(../../../../media/sobipro/48x48/folder-section.png);
+}
+.spicon-48-SobiFieldEdit {
+  background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
+}
