Layout for Fields Manager in Legacy Mode

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -328,3 +328,6 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiFieldEdit {
   background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
 }
+.spicon-48-SobiEntries {
+  background-image: url(../../../../media/sobipro/48x48/entries.png);
+}
