--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -180,7 +180,7 @@ div.spScreenTitle h4 {
   padding-top: 0px;
   width: 200px;
 }
-#SPAdmNavBar .control-group {
+.SPAdmNavBar .control-group {
   float: left;
   padding-left: 12px;
 }
@@ -317,17 +317,20 @@ input.sp-input-micro[type="text"] {
   padding: 10px;
 }
 .spicon-48-SobiPro {
-  background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
+  background-image: url('../../../../media/sobipro/48x48/folder-sobipro.png');
 }
 .spicon-48-SobiFields {
-  background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
+  background-image: url('../../../../media/sobipro/48x48/folder-fieldsmanager.png');
 }
 .spicon-48-SobiSection {
-  background-image: url(../../../../media/sobipro/48x48/folder-section.png);
+  background-image: url('../../../../media/sobipro/48x48/folder-section.png');
 }
 .spicon-48-SobiFieldEdit {
-  background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
+  background-image: url('../../../../media/sobipro/48x48/edit-rename.png');
 }
 .spicon-48-SobiEntries {
-  background-image: url(../../../../media/sobipro/48x48/entries.png);
+  background-image: url('../../../../media/sobipro/48x48/entries.png');
+}
+.spicon-48-SobiCatList {
+  background-image: url('../../../../media/sobipro/48x48/folder-categories.png');
 }
