--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -301,6 +301,9 @@ div.spScreenTitle h4 {
   border-top-color: #ffffff;
   border-bottom-color: #ffffff;
 }
+.SobiPro .spCcMethod .form-horizontal {
+  margin-bottom: 0;
+}
 
 #SPAdminForm input,
 #SPAdminForm textarea,
@@ -344,7 +347,7 @@ div.spScreenTitle h4 {
 }
 
 .SobiPro .SpCellCenter .sp-mini-bt {
-  padding: 4px 14px!important;
+  padding: 4px 4px!important;
 }
 
 #SPAdminForm .input-splarge {
