JavaScript - focus set back on error

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -337,3 +337,6 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiCatList {
   background-image: url('../../../../media/sobipro/48x48/folder-categories.png');
 }
+.spicon-48-SobiEdit {
+  background-image: url('../../../../media/sobipro/48x48/editor.png');
+}
