--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -402,6 +402,9 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiCatList {
 	background-image: url('@{admIcons}/folder-categories.png');
 }
+.spicon-48-SobiEdit {
+	background-image: url('@{admIcons}/editor.png');
+}
 
 
 
