Image im Fields manager

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -340,3 +340,6 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiEdit {
   background-image: url('../../../../media/sobipro/48x48/editor.png');
 }
+.spicon-48-SobiFieldList {
+  background-image: url('../../../../media/sobipro/48x48/fields.png');
+}
