--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -405,6 +405,10 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiEdit {
 	background-image: url('@{admIcons}/editor.png');
 }
+.spicon-48-SobiFieldList {
+  background-image: url('@{admIcons}/fields.png');
+}
+
 
 
 
