--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
@@ -46,7 +46,7 @@
 a [class^="icon-"],
 a [class*=" icon-"] {
   display: inline-block;
-  text-decoration: inherit;
+  text-decoration: none;  /* Sigsiu.NET */
 }
 
 /* makes the font 33% larger relative to the icon container */
