revise of all entries screen

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -287,7 +287,8 @@ div.spScreenTitle h4 {
 }
 .SobiPro .SpCellCenter .icon-shopping-cart,
 .SobiPro .SpCellCenter .icon-check-empty,
-.SobiPro .SpCellCenter .icon-lock {
+.SobiPro .SpCellCenter .icon-lock,
+.SobiPro .SpCellCenter .icon-thumbs-down {
   color: grey;
 }
 .SobiPro .SpCellCenter .sp-mini-bt {
