--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -342,7 +342,8 @@ div.spScreenTitle h4 {
 
 .SobiPro .SpCellCenter .icon-shopping-cart,
 .SobiPro .SpCellCenter .icon-check-empty,
-.SobiPro .SpCellCenter .icon-lock {
+.SobiPro .SpCellCenter .icon-lock,
+.SobiPro .SpCellCenter .icon-thumbs-down {
   color: grey;
 }
 
