--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -43,14 +43,13 @@
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 6px;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#f5f5f5', GradientType = 0);
   -webkit-box-shadow: inset 0 1px 0 white;
   -moz-box-shadow: inset 0 1px 0 #ffffff;
   box-shadow: inset 0 1px 0 white;
 }
 
 .SobiPro .firstspan {
-  margin-left: 0px!important;
+  margin-left: 0px !important;
 }
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li {
@@ -74,7 +73,6 @@
   background-image: -o-linear-gradient(top, #a90000, #890000);
   background-image: linear-gradient(to bottom, #a90000, #890000);
   background-image: -moz-linear-gradient(top, #a90000, #890000);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
   border-color: #a90000 #a90000 #890000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -152,10 +150,12 @@
   color: inherit;
   background-color: whiteSmoke;
 }
+
 #SPAdmToolbar .spIconBar {
   padding-top: 8px;
   height: 45px;
 }
+
 div.spScreenTitle,
 div.spScreenSubHead {
   background-repeat: no-repeat;
@@ -204,6 +204,7 @@ div.spScreenTitle h4 {
 #SPAdminForm a {
   color: #0000b3;
 }
+
 #SPAdminForm a:hover {
   color: #00007b;
 }
@@ -252,12 +253,14 @@ div.spScreenTitle h4 {
   background-color: #993333;
   color: #ffffff;
 }
+
 .SobiPro .brand {
   color: #7f7f7f;
   font-size: 9px;
   margin-left: 4px;
   margin-top: -15px;
 }
+
 .SobiPro .brand a {
   color: #7f7f7f;
   text-decoration: none;
@@ -276,9 +279,8 @@ div.spScreenTitle h4 {
   background-repeat: repeat-x;
   border-color: #a90000 #a90000 #890000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
+
 .SobiPro .btn-sobipro:hover,
 .SobiPro .btn-sobipro:active,
 .SobiPro .btn-sobipro.active,
@@ -293,6 +295,7 @@ div.spScreenTitle h4 {
 .SobiPro .btn-sobipro.active {
   background-color: #003399 \9;
 }
+
 .SobiPro .btn-group.open .btn-sobipro.dropdown-toggle {
   background-color: #993333;
 }
@@ -301,6 +304,7 @@ div.spScreenTitle h4 {
   border-top-color: #ffffff;
   border-bottom-color: #ffffff;
 }
+
 .SobiPro .spCcMethod .form-horizontal {
   margin-bottom: 0;
 }
@@ -348,7 +352,7 @@ div.spScreenTitle h4 {
 }
 
 .SobiPro .SpCellCenter .sp-mini-bt {
-  padding: 4px 4px!important;
+  padding: 4px 4px !important;
 }
 
 #SPAdminForm .input-splarge {
@@ -363,7 +367,6 @@ div.spScreenTitle h4 {
 .SobiPro .btn-sobipro.active {
   color: rgba(255, 255, 255, 0.75);
 }
-
 
 input.sp-input-micro[type="text"] {
   width: 25px;
@@ -388,28 +391,44 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiPro {
   background-image: url('@{admIcons}/folder-sobipro.png');
 }
+
 .spicon-48-SobiFields {
   background-image: url('@{admIcons}/folder-fieldsmanager.png');
 }
+
 .spicon-48-SobiSection {
   background-image: url('@{admIcons}/folder-section.png');
 }
+
 .spicon-48-SobiFieldEdit {
   background-image: url('@{admIcons}/edit-rename.png');
 }
+
 .spicon-48-SobiEntries {
   background-image: url('@{admIcons}/entries.png');
 }
+
 .spicon-48-SobiCatList {
-	background-image: url('@{admIcons}/folder-categories.png');
+  background-image: url('@{admIcons}/folder-categories.png');
 }
+
 .spicon-48-SobiEdit {
-	background-image: url('@{admIcons}/editor.png');
+  background-image: url('@{admIcons}/editor.png');
 }
+
 .spicon-48-SobiFieldList {
   background-image: url('@{admIcons}/fields.png');
 }
 
+.user-selector .response .btn {
+  margin: 5px;
+  width: 200px;
+}
 
+.user-selector .btn-block {
+  margin-top: 15px;
+}
 
-
+.user-selector .response {
+  min-height: 300px;
+}
