--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -250,7 +250,6 @@ div.spScreenTitle h4 {
 
 #SPAdminForm .controls .btn:active,
 #SPAdminForm .controls .btn.active {
-  background-color: #993333;
   color: #ffffff;
 }
 
@@ -305,8 +304,20 @@ div.spScreenTitle h4 {
   border-bottom-color: #ffffff;
 }
 
+.SobiPro .btn-danger:hover,
+.SobiPro .btn-danger:active,
+.SobiPro .btn-danger.active,
+.SobiPro .btn-danger.disabled,
+.SobiPro .btn-danger[disabled] {
+  background-color: #993333;
+}
+
 .SobiPro .spCcMethod .form-horizontal {
   margin-bottom: 0;
+}
+
+#selectedCatPath {
+  color: #808080;
 }
 
 #SPAdminForm input,
