first care of index.html Revision of Category Edit, Layout of datepicker, category chooser new field type userGetter

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -209,6 +209,20 @@ div.spScreenTitle h4 {
   color: #00007b;
 }
 
+#spCat .btn,
+#spCat .btn:hover {
+  color: #333333;
+}
+
+#spCat .btn-primary,
+#spCat .btn-primary:hover,
+#spCat .btn-danger,
+#spCat .btn-danger:hover,
+#spCat .btn-success,
+#spCat .btn-success:hover {
+  color: #ffffff;
+}
+
 #SPAdminForm table .control-label {
   padding-top: 5px;
   color: #0000b3;
@@ -320,6 +334,18 @@ div.spScreenTitle h4 {
   color: #808080;
 }
 
+.infoText {
+  color: #909090;
+  background-color: #eeeeee;
+  border-radius: 3px;
+  border: 1px solid #dddddd;
+  display: inline-block;
+  min-height: 18px;
+  min-width: 50px;
+  margin-top: -3px;
+  padding: 2px 5px 0 5px;
+}
+
 #SPAdminForm input,
 #SPAdminForm textarea,
 #SPAdminForm select,
@@ -386,7 +412,7 @@ input.sp-input-micro[type="text"] {
 
 .spOutput {
   min-height: 23px;
-  padding-top: 5px;
+  padding-top: 7px;
 }
 
 .sp-mini-bt {
