--- a/Component/branches/SobiPro-1.1/Site/media/less/bootstrap/datepicker.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/bootstrap/datepicker.less
@@ -140,12 +140,18 @@
   font-size: 19.5px;
 }
 
+.datepicker tfoot tr:first-child th,
 .datepicker thead tr:first-child th {
   cursor: pointer;
 }
 
+.datepicker tfoot tr:first-child th:hover,
 .datepicker thead tr:first-child th:hover {
   background: #eeeeee;
+}
+
+.datepicker .month {
+  padding-left: 5px;
 }
 
 .input-append.date .add-on i, .input-prepend.date .add-on i {
