Layout Cat-Chooser

--- a/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
+++ b/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
@@ -2,19 +2,16 @@
 	<h4 style="margin-bottom: 0px;">Sobi Team</h4>
 	<ul>
 		<li>
-			<a href="http://sobi.it/Sigrid/Suski" target="_blank">Sigrid Suski aka Trinity</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Quality &amp; Testing, Documentation, Support, Public Relations
+			<a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Quality &amp; Testing, Documentation, Support, Public Relations
 		</li>
 		<li>
-			<a href="http://radek.suski.eu" target="_blank">Radek Suski aka Neo</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Software Engineering, Support
-		</li>
-		<li>
-			<a href="http://www.robertswebdesign.com/" target="_blank">Robert Vining aka Robert_Vining</a> - Quality &amp; Testing, Support, Public Relations
+			<a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a> (<a href="http://sigsiu.net" target="_blank">www.Sigsiu.NET</a>) - Core Developer, Software Engineering, Support
 		</li>
 		<li>
 			Sławek Sikora aka sikor79 - Quality &amp; Testing, Support
 		</li>
 		<li>
-			Helge Kreutzer Johnsen aka Poffen - Quality &amp; Testing, Support
+            Isidro Baquero aka Isidro - Quality &amp; Testing, Support
 		</li>
 	</ul>
 
