--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -209,6 +209,8 @@ div.spScreenTitle h4 {
   color: #00007b;
 }
 
+#spIco .btn,
+#spIco .btn:hover,
 #spCat .btn,
 #spCat .btn:hover {
   color: #333333;
@@ -468,4 +470,8 @@ input.sp-input-micro[type="text"] {
 
 .user-selector .response {
   min-height: 300px;
+}
+
+.SobiPro table.mceLayout {
+  border-radius: 3px;
 }
