--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -170,6 +170,8 @@ div.spScreenTitle h4 {
 #SPAdminForm a:hover {
   color: #00007b;
 }
+#spIco .btn,
+#spIco .btn:hover,
 #spCat .btn,
 #spCat .btn:hover {
   color: #333333;
@@ -381,4 +383,7 @@ input.sp-input-micro[type="text"] {
 }
 .user-selector .response {
   min-height: 300px;
+}
+.SobiPro table.mceLayout {
+  border-radius: 3px;
 }
