--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -170,19 +170,20 @@ div.spScreenTitle h4 {
 #SPAdminForm a:hover {
   color: #00007b;
 }
-#spIco .btn,
-#spIco .btn:hover,
-#spCat .btn,
-#spCat .btn:hover {
-  color: #333333;
+.modal-footer .btn,
+.modal-footer .btn:hover {
+  color: #333333!important;
 }
-#spCat .btn-primary,
-#spCat .btn-primary:hover,
-#spCat .btn-danger,
-#spCat .btn-danger:hover,
-#spCat .btn-success,
-#spCat .btn-success:hover {
-  color: #ffffff;
+.modal-footer .btn-primary,
+.modal-footer .btn-primary:hover,
+.modal-footer .btn-danger,
+.modal-footer .btn-danger:hover,
+.modal-footer .btn-success,
+.modal-footer .btn-success:hover {
+  color: #ffffff!important;
+}
+.SobiPro .modal {
+  width: 500px;
 }
 #SPAdminForm table .control-label {
   padding-top: 5px;
@@ -221,7 +222,8 @@ div.spScreenTitle h4 {
 }
 #SPAdminForm .controls .btn:active,
 #SPAdminForm .controls .btn.active {
-  color: #ffffff;
+  /*color: #ffffff; suchen wo benötigt und detaillierter lösen!!*/
+
 }
 .SobiPro .brand {
   color: #7f7f7f;
@@ -290,6 +292,10 @@ div.spScreenTitle h4 {
   min-width: 50px;
   margin-top: -3px;
   padding: 2px 5px 0 5px;
+}
+.infoText a,
+.infoText a:hover {
+  color: #6699ff!important;
 }
 #SPAdminForm input,
 #SPAdminForm textarea,
@@ -374,15 +380,16 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiFieldList {
   background-image: url('../../../../media/sobipro/48x48/fields.png');
 }
-.user-selector .response .btn {
+.spUserSelector .response .btn {
   margin: 5px;
   width: 200px;
 }
-.user-selector .btn-block {
+.spUserSelector .btn-block {
   margin-top: 15px;
 }
-.user-selector .response {
+.spUserSelector .response {
   min-height: 300px;
+  margin-left: 20px;
 }
 .SobiPro table.mceLayout {
   border-radius: 3px;
